--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -29,3 +29,9 @@ FLIPPER_VERSION=0.37.0
 
 # change this to located your java jdk
 org.gradle.java.home=C:\\Program Files (x86)\\Java\\jdk1.8.0_45
+
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=qwerty123
+MYAPP_UPLOAD_KEY_PASSWORD=qwerty123
