--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
+env:
+  global:
+  - NODE_VERSION=stable
+
 install:
-  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
-  - npm ci
+- curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
+- export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+- nvm install $NODE_VERSION
+- nvm use $NODE_VERSION
+- nvm alias default $NODE_VERSION
+
+- npm install -g react-native-cli
+- npm install -g detox-cli
+- npm install -g yarn
+
 language: android
 jdk: oraclejdk8
 env:
