--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,40 @@
-env:
-  global:
-  - NODE_VERSION=stable
-
 install:
 - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
 - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-- nvm install $NODE_VERSION
-- nvm use $NODE_VERSION
-- nvm alias default $NODE_VERSION
+- nvm install stable
+- nvm use stable
+- nvm alias default stable
 
 - npm install -g react-native-cli
 - npm install -g detox-cli
 - npm install -g yarn
 
-language: android
-jdk: oraclejdk8
-env:
-  global:
-    - ANDROID_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
-android:
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-  components:
-    - tools
-    - platform-tools
-    # The BuildTools version used by your project
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    # The SDK version used to compile your project
-    - android-$ANDROID_API_LEVEL
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-$ANDROID_API_LEVEL
-before_script:
-  # Prepare pre-accepted licenses to not be promted at installation
-  - yes | sdkmanager "platforms;android-27"
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode11.3
+      language: objective-c
+      before_install:
+        - brew tap wix/brew
+        - brew install applesimutils
+      script:
+        - yarn install
+        - yarn test
+        - cd ios
+        - pod install
+        - cd ..
+        - detox build --configuration ios.sim.release
+        - detox test --configuration ios.sim.release --cleanup
 
-script:
-  - ./android/gradlew assembleRelease
-
-deploy:
-  provider: releases
-  api-key: $GITHUB_API_KEY
-  file: $TRAVIS_BUILD_DIR/app/build/outputs/apk/release/app-release.apk
-  skip_cleanup: true
-  name: dev-build-$TRAVIS_TAG
-  body: Automatic build of $TRAVIS_BRANCH ($TRAVIS_COMMIT) built by Travis CI on $(date +'%F %T %Z').
-  prerelease: true
-  overwrite: true
-  target_commitish: $TRAVIS_COMMIT
-  on:
-    tags: true
-
-after_deploy:
-  - rm -rf $TRAVIS_BUILD_DIR/app/build/outputs
+    - os: linux
+      language: android
+      jdk: oraclejdk8
+      android:
+        components:
+          - build-tools-23.0.1
+          - android-23
+      before_install:
+        - yes | sdkmanager "platforms;android-23"
+        - yes | sdkmanager "build-tools;23.0.1"
+      script:
+        - "./android/gradlew assembleRelease -p android/"
