--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ matrix:
           - extra-google-m2repository
           - extra-android-m2repository
           - addon-google_apis-google-$ANDROID_API_LEVEL
+      before_install :
+        - chmod +x gradlew
       before_script:
         # Prepare pre-accepted licenses to not be promted at installation
         - yes | sdkmanager "platforms;android-27"
