--- a/.travis.yml
+++ b/.travis.yml
@@ -33,12 +33,13 @@ matrix:
         - google-gdk-license-.+
       before_script:
         # Prepare pre-accepted licenses to not be promted at installation
-        - yes | sdkmanager "platforms;android-27"
+        - yes | sdkmanager "platforms;android-29"
+        - yes | sdkmanager "build-tools;29.0.2"
         - chmod +x ./android/gradlew
       script:
         - cd android
       after_script:
-        - ./gradlew assembleRelease
+        - "./gradlew assembleRelease -p android/"
 
       deploy:
         provider: releases
