--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,33 @@
-install:
-- curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
-- export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+language: android
+before_install: #1.1
 - nvm install stable
-- nvm use stable
-- nvm alias default stable
+- node --version
+install: #1.2
+- npm install
+android: #1.3
+  components:
+  - build-tools-29.0.2
+  - android-29
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - addon-google_apis-google-16
+script: 
+- npm run ci #2
+- cd android && ./gradlew assembleRelease #3
+deploy:
+  provider: releases
+  api-key: $GITHUB_API_KEY
+  file: $TRAVIS_BUILD_DIR/android/app/build/outputs/apk/release/app-release.apk
+  skip_cleanup: true
+  name: dev-build-$TRAVIS_TAG
+  body: Automatic build of $TRAVIS_BRANCH ($TRAVIS_COMMIT) built by Travis CI on $(date +'%F %T %Z').
+  prerelease: true
+  overwrite: true
+  target_commitish: $TRAVIS_COMMIT
+  on:
+    tags: true
 
-- npm install -g react-native-cli
-- npm install -g detox-cli
-- npm install -g yarn
-
-- npm i @react-native-community/cli-platform-android
-
-matrix:
-  include:
-
-    - os: linux
-      language: android
-      jdk: oraclejdk8
-      sudo: required
-      android:
-        components:
-          - platform-tools
-          - tools
-          - build-tools-29.0.2
-          - android-29
-          - extra-android-m2repository
-          - extra-google-google_play_services
-          - extra-google-m2repository
-      licenses:
-        - android-sdk-preview-license-.+
-        - android-sdk-license-.+
-        - google-gdk-license-.+
-      before_script:
-        # Prepare pre-accepted licenses to not be promted at installation
-        - yes | sdkmanager "platforms;android-29"
-        - yes | sdkmanager "build-tools;29.0.2"
-        - chmod +x ./android/gradlew
-      script:
-        - cd android
-      after_script:
-        - "./gradlew assembleRelease -p android/"
-
-      deploy:
-        provider: releases
-        api-key: $GITHUB_API_KEY
-        file: $TRAVIS_BUILD_DIR/android/app/build/outputs/apk/release/app-release.apk
-        skip_cleanup: true
-        name: dev-build-$TRAVIS_TAG
-        body: Automatic build of $TRAVIS_BRANCH ($TRAVIS_COMMIT) built by Travis CI on $(date +'%F %T %Z').
-        prerelease: true
-        overwrite: true
-        target_commitish: $TRAVIS_COMMIT
-        on:
-          tags: true
-
-      after_deploy:
-        - rm -rf $TRAVIS_BUILD_DIR/android/app/build/outputs
+after_deploy:
+  - rm -rf $TRAVIS_BUILD_DIR/android/app/build/outputs
 
