--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ android: #1.3
   - extra-google-google_play_services
   - extra-google-m2repository
   - addon-google_apis-google-16
+before_script :
+- chmod +x ./android/gradlew
 script: 
 - npm run ci #2
 - cd android && ./gradlew assembleRelease #3
