--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,33 @@ before_install: #1.1
 - node --version
 install: #1.2
 - npm install
+
+env:
+  global:
+    - ANDROID_API_LEVEL=29
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.2
 android: #1.3
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
   components:
-  - build-tools-29.0.2
-  - android-29
-  - extra-android-m2repository
-  - extra-google-google_play_services
-  - extra-google-m2repository
-  - addon-google_apis-google-16
+    - tools
+    - platform-tools
+    # The BuildTools version used by your project
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    # The SDK version used to compile your project
+    - android-$ANDROID_API_LEVEL
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
 before_script :
 - chmod +x ./android/gradlew
+- yes | sdkmanager "platforms;android-29"
+
+- yes | sdkmanager --licenses
 script: 
 - npm run ci #2
 - cd android && ./gradlew assembleRelease #3
