--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ android: #1.3
 before_script :
 - chmod +x ./android/gradlew
 - yes | sdkmanager "platforms;android-29"
-
-- yes | sdkmanager --licenses
+- yes | ~/Android/Sdk/tools/bin/sdkmanager --licenses
 script: 
 - npm run ci #2
 - cd android && ./gradlew assembleRelease #3
@@ -51,4 +50,5 @@ deploy:
 
 after_deploy:
   - rm -rf $TRAVIS_BUILD_DIR/android/app/build/outputs
+
 
