--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ android: #1.3
 before_script :
 - chmod +x ./android/gradlew
 - yes | sdkmanager "platforms;android-29"
-- yes | ~/Android/Sdk/tools/bin/sdkmanager --licenses
+- yes | sdkmanager "build-tools;27.0.1"
 script: 
 - npm run ci #2
 - cd android && ./gradlew assembleRelease #3
