--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ deploy:
   on:
     tags: true
 
-# after_deploy:
-#   - rm -rf $TRAVIS_BUILD_DIR/android/app/build/outputs
+after_deploy:
+  - rm -rf $TRAVIS_BUILD_DIR/android/app/build/outputs
 
 
